infrastructure/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mrun

spec:

  ingressClassName: nginx

  rules:

    - host: api.mrun.local

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: api-gateway

                port:

                  number: 80

    - host: keycloak.mrun.local

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: keycloak

                port:

                  number: 8080

    - host: consul.mrun.local

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: consul

                port:

                  number: 8500

    - host: minio.mrun.local

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: minio

                port:

                  number: 9001
